# Marslite_Simulation

./: .gitignore  README.md  docker_run.sh
cartographer_ws/: docker_run.sh
cartographer_ws/build_isolated/: catkin_make_isolated.cache
cartographer_ws/build_isolated/cartographer_ros/: .ninja_deps  .ninja_log  AllFiles.cmake  CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  build.ninja  cmake_install.cmake  install_manifest.txt  rules.ninja
cartographer_ws/build_isolated/cartographer_ros_msgs/: .ninja_log  CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  build.ninja  cmake_install.cmake  install_manifest.txt  rules.ninja
cartographer_ws/build_isolated/cartographer_rviz/: .ninja_deps  .ninja_log  AllFiles.cmake  CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  build.ninja  cmake_install.cmake  install_manifest.txt  rules.ninja
cartographer_ws/build_isolated/cartographer_turtlebot/: .ninja_deps  .ninja_log  AllFiles.cmake  CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  build.ninja  cmake_install.cmake  install_manifest.txt  rules.ninja
cartographer_ws/build_isolated/mars_lite_description/: .ninja_log  CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  build.ninja  cmake_install.cmake  install_manifest.txt  rules.ninja
cartographer_ws/build_isolated/robotiq_description/: .ninja_log  CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  build.ninja  cmake_install.cmake  install_manifest.txt  rules.ninja
cartographer_ws/build_isolated/robotiq_gazebo/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  build.ninja  cmake_install.cmake  install_manifest.txt  rules.ninja
cartographer_ws/build_isolated/tm5_700_moveit_config/: .ninja_log  CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  build.ninja  cmake_install.cmake  install_manifest.txt  rules.ninja
cartographer_ws/build_isolated/tm5_description/: .ninja_log  CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  build.ninja  cmake_install.cmake  install_manifest.txt  rules.ninja
cartographer_ws/devel_isolated/: env.sh  setup.bash  setup.sh  setup.zsh
cartographer_ws/devel_isolated/cartographer_ros/: .catkin  .rosinstall
cartographer_ws/devel_isolated/cartographer_ros_msgs/: .catkin
cartographer_ws/devel_isolated/cartographer_rviz/: .catkin  .rosinstall  setup.sh
cartographer_ws/devel_isolated/cartographer_turtlebot/: .catkin  _setup_util.py  setup.sh
cartographer_ws/install_isolated/: setup.sh
cartographer_ws/map/: core  map.pbstream  map.pgm  map.yaml
cartographer_ws/src/: .rosinstall  .rosinstall.bak
doc/: .~lock.note.ods#  command_list.txt  command_ok.txt  git_and_docker_push_command.txt  note.ods
maps/: 001.pgm  001.yaml  002.pgm  002.yaml  003.pgm  003.yaml  004.pgm  004.yaml  005.pgm  005.yaml  006.pgm  006.yaml  007.pgm  007.yaml  008.yaml  011.pgm  011.yaml  012.pgm  012.yaml  021.pgm  021.yaml  022.pgm  022.yaml  023.pgm  023.yaml  024.pgm  024.yaml  025.pgm  025.yaml  026.pgm  026.yaml  027.pgm  027.yaml  028.pgm  028.yaml
maps/0827/: 001.pgm  001.yaml  002.pgm  002.yaml  003.pgm  003.yaml  004.pgm  004.yaml
mars_ws/: navigation_origin.sh  navigation_sam.sh  pixel_values.txt
mars_ws/src/: .rosinstall  .rosinstall.bak
mars_ws/src/hyper_system/: CMakeLists.txt  package.xml
mars_ws/src/hyper_system/launch/: hyper_controller.launch
mars_ws/src/hyper_system/scripts/: fuzzy_controller.py  fuzzy_controller_bag.py  fuzzy_definition.py  fuzzy_membership_function.py  navigation_state_monitor.py
mars_ws/src/hyper_system/src/: LaserScan_to_MultiEchoLaserScan.cpp  compare.cpp  navigability_pub.cpp  navigability_srv.cpp
mars_ws/src/hyper_system/srv/: Navigability.srv
mars_ws/src/navigation/mars_lite_2dnav/: CMakeLists.txt  README.md  package.xml
mars_ws/src/navigation/mars_lite_2dnav/config/: ekf_mars_lite.yaml  robot_localization.yaml
mars_ws/src/navigation/mars_lite_2dnav/launch/: amcl.launch  amcl_copy.launch  ekf_fusion.launch  ekf_localization.launch  navigation_rl.launch  save_map.launch
mars_ws/src/navigation/mars_lite_2dnav/launch/includes/: amcl.launch.xml  move_base_localization.launch.xml
mars_ws/src/navigation/mars_lite_2dnav/maps/: -bash518.pgm  -bash518.yaml  -bash618.yaml  0518.pgm  0518.yaml  0618.yaml  632.yaml  632map.pgm  632map.yaml  current_area.pgm  current_area.yaml  ee632_test.pgm  ee632_test.yaml  test1.pgm  test1.yaml
mars_ws/src/navigation/mars_lite_2dnav/maps/1/: 1220.pgm.pgm  1220.pgm.yaml  632_outside.pgm  632_outside.yaml  EE_6F_1.pgm  EE_6F_1.yaml  EE_6F_2.pgm  EE_6F_2.yaml  cstp_test.pgm  cstp_test.yaml  current_area.pgm  josh.pgm  josh.yaml  lab0706x1.pgm  lab0706x1.yaml  map632.pgm  map632.yaml  nctu.pgm  nctu.yaml  smartcenter_1.pgm  smartcenter_1.yaml  smartcenter_2.pgm  smartcenter_2.yaml  test.pgm  test.yaml  test1.pgm  test1.yaml  white.pgm  white.yaml
mars_ws/src/navigation/mars_lite_2dnav/params_localization/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
mars_ws/src/navigation/marslite_navigation/: CMakeLists.txt  package.xml
mars_ws/src/navigation/marslite_navigation/config/: teleop_params.yaml  turtlebot3_lds_2d_gazebo.lua
mars_ws/src/navigation/marslite_navigation/config/move_base/: costmap_common_params.yaml
mars_ws/src/navigation/marslite_navigation/include/marslite_navigation/: artificial_potential_field.h  teleop_interface.h  teleop_joystick.h  teleop_keyboard.h
mars_ws/src/navigation/marslite_navigation/launch/: amcl.launch  cartographer_slam.launch  hector_slam.launch  move_base.launch  navigation.launch  slam_gmapping.launch  teleop_joystick.launch  teleop_keyboard.launch
mars_ws/src/navigation/marslite_navigation/maps/: supermarket.pgm  supermarket.yaml
mars_ws/src/navigation/marslite_navigation/src/: teleop_interface.cpp  teleop_joystick.cpp  teleop_keyboard.cpp
yolo_ws/: .rosinstall.bak  compile_py36.sh  docker_run.sh  navigation_sam.sh
(+982 files in other folders)
