<?xml version="1.0"?>
<package format="2">
  <name>mars_lite_2dnav</name>
  <version>1.0.0</version>
  <description>The mars_lite_2dnav package</description>


  <maintainer email="daniel.reyes@itri.org.tw">Daniel Reyes</maintainer>
  <license>BSD 3-Clause</license>
  <author>Daniel Reyes</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
